test/invalid/ClassIdEqPrimitiveTypeObject/Object.plume
/**
 * Class identifier can't match a primitive type - Object.
 *
 * @author Diogo Marques, 30100
 */
class Object extends Object is
	method override toString : () -> String is
		""
	